--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ env:
   - DJANGO='django>=1.8,<1.9'
 
 install:
-  - pip install -q $DJANGO
+  - pip install -q $DJANGO pytz
 
 script: python setup.py test
 
