--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,11 @@ language: python
 python:
   - 2.7
   - 3.4
+  - 3.5
 
 env:
   - DJANGO='django>=1.8,<1.9'
+  - DJANGO='django>=1.9'
 
 install:
   - pip install -q $DJANGO pytz
