--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,15 @@ python:
   - 2.7
   - 3.4
   - 3.5
+  - 3.7
+  - 3.8
 
 env:
-  - DJANGO='django>=1.8,<1.9'
-  - DJANGO='django>=1.9'
+  - DJANGO='django>=2.2.9'
 
 install:
   - pip install -q $DJANGO pytz
+  - pip install six
   - pip install coveralls
 
 script:
