--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,28 @@ python:
   - 3.8
 
 env:
-  - DJANGO='django>=2.2.9'
+  - DJANGO=1.11.27
+  - DJANGO=2.2.9
+  - DJANGO=3.0.1
+
+jobs:
+  exclude:
+    - python: 2.7
+      env: DJANGO=2.2.9
+    - python: 2.7
+      env: DJANGO=3.0.1
+    - python: 3.5
+      env: DJANGO=1.11.27
+    - python: 3.5
+      env: DJANGO=3.0.1
+    - python: 3.6
+      env: DJANGO=1.11.27
+    - python: 3.7
+      env: DJANGO=1.11.27
+    - python: 3.8
+      env: DJANGO=1.11.27
+    - python: 3.8
+      env: DJANGO=2.2.9
 
 install:
   - pip install -q $DJANGO pytz
